--- a/ascribe_cards/templates/base.html
+++ b/ascribe_cards/templates/base.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 {% block head %}{% endblock %}
   </head>
   <body>
