--- a/ascribe_cards/templates/base.html
+++ b/ascribe_cards/templates/base.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-{% block head %}{% endblock %}
+{% block standard_tags %}{% endblock %}  
+{% block open_graph_tags %}{% endblock %}
+{% block twitter_tags %}{% endblock %}
   </head>
   <body>
 {% if include_body %}
