--- a/ascribe_cards/templates/final1.html
+++ b/ascribe_cards/templates/final1.html
@@ -1,50 +1,40 @@
 {% extends "base.html" %}
 
-{% block head %}
+<!-- Note that I remove all HTML comments before sending the HTML out. -->
 
-<!-- Note that I we all these HTML comments before sending the HTML out. -->
+{% block standard_tags %}
+<!-- Note that Facebook and others *do* use these sometimes -->
+<!-- See http://www.trueanthem.com/blog/author-tags-facebook-story-previews/ -->
+
+    <meta charset="utf-8">
+    <title>{{title}}</title>
+    <meta name="author" content="{{author}}" />
+    <meta name="description" content="{{description}}" />
+<!-- Use the same 16x16 favicon as the main ascribe.io web app -->
+    <link rel="icon" sizes="16x16" type="image/png" href="https://s3-us-west-2.amazonaws.com/ascribe0/whitelabel/www/favicon-16x16.png"></link>
+
+{% endblock %}
+
+{% block open_graph_tags %}
 
 <!-- Key Open Graph tags used by Facebook: https://developers.facebook.com/docs/sharing/webmasters#markup -->
 
-<!-- TITLE -->
-
-    <title>{{title}}</title>
 <!-- og:title is the title of your article without any branding such as your site name. -->
     <meta property="og:title" content="{{title}}" />
 
-
-<!-- AUTHOR -->
-
-<!-- See http://www.trueanthem.com/blog/author-tags-facebook-story-previews/ -->
-    <meta name="author" content="{{author}}" />
-
 <!-- Note: I didn't include the article:author tag because 1) it's mainly for ARTICLE authors and 2) the content value is expected to be an URL, such as the URL of the author's Facebook profile, but ascribe doesn't know that. -Troy -->
-
-
-<!-- DESCRIPTION -->
 
 <!-- og:description is a brief description of the content, usually between 2 and 4 sentences. This will displayed below the title of the post on Facebook. -->
     <meta property="og:description" content="{{description}}" />
-    <meta name="description" content="{{description}}" />
 
-
-<!-- PAGE URL -->
-
+<!-- og:url is the canonical URL for your page. This should be the undecorated URL, without session variables, user identifying parameters, or counters. Likes and Shares for this URL will aggregate at this URL. -->
 <!-- Example expected full ascribe URLs: (but we won't be getting the first part)    -->
 <!-- Pieces:   https://www.ascribe.io/app/pieces/13718    -->
 <!-- Editions: https://www.ascribe.io/app/editions/19nQkWyKs8M4LenXGGFvLrfnG4jjxjEgQr   -->
-
-<!-- og:url is the canonical URL for your page. This should be the undecorated URL, without session variables, user identifying parameters, or counters. Likes and Shares for this URL will aggregate at this URL. -->
     <meta property="og:url" content="https://www.ascribe.io/app/{{endpoint}}/{{item_id}}" />
-
-
-<!-- SITE NAME -->
 
 <!-- og:site_name is the name of your website (such as IMDb, not imdb.com). -->
     <meta property="og:site_name" content="ascribe" />
-
-
-<!-- IMAGE URL -->
 
 <!-- og:image is the URL of the image that appears when someone shares the content to Facebook. To update an image after it's been published, use a new URL for the new image. Images are cached based on the URL and won't be updated unless the URL changes. -->
     <meta property="og:image" content="{{img_url}}" />
@@ -57,21 +47,14 @@
     <meta property="og:image:type" content="{{img_type}}" />
 {% endif %}
 
-
-<!-- FACEBOOK APP ID -->
-
 <!-- fb:app_id is ascribe's Facebook app ID. -->
     <meta property="fb:app_id" content="420813844732240" />
-
-
-<!-- OG:TYPE -->
 
 <!-- og:type is the type of media of your content. This tag impacts how your content shows up in [Facebook's] News Feed. If you don't specify a type,the default is website. Each URL should be a single object, so multiple og:type values are not possible. Find the full list of object types in the Facebook Object Types Reference. -->
 
 <!-- In principle, the og:type should change depending on the type of item. Unfortunately, the list of available types is very limited. Moreover, ascribe doesn't really have enough information to determine the type. It's tempting to leave the type unspecified, but unfortunately, the default is "website", which is probably wrong for most things on ascribe. Therefore we just set the type to "product", which is general enough that it's either correct or only vaguely wrong. -->
 
     <meta property="og:type" content="product" />
-
 
 {% if video_url %}
 <!-- VIDEO (for videos only) -->
