temp changes for testing

--- a/ascribe_cards/templates/final1.html
+++ b/ascribe_cards/templates/final1.html
@@ -31,7 +31,7 @@
 <!-- Example expected full ascribe URLs: (but we won't be getting the first part)    -->
 <!-- Pieces:   https://www.ascribe.io/app/pieces/13718    -->
 <!-- Editions: https://www.ascribe.io/app/editions/19nQkWyKs8M4LenXGGFvLrfnG4jjxjEgQr   -->
-    <meta property="og:url" content="https://www.ascribe.io/app/{{endpoint}}/{{item_id}}">
+    <meta property="og:url" content="http://www.ascribe.ninja/app/{{endpoint}}/{{item_id}}">
 
 <!-- og:site_name is the name of your website (such as IMDb, not imdb.com). -->
     <meta property="og:site_name" content="ascribe">
